# htmx_event_update_demo

./: Cargo.toml
src/: main.rs
src/models/: data.rs  mod.rs  user.rs  users.rs
src/utils/: event_emitter.rs  mod.rs
src/views/: handler.rs  handlers.rs  mod.rs
static/css/: styles.css
templates/: base.html  event_loop_toggle.html  index.html  user_row.html  user_table.html
