[package]
name = "samurai_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama_axum = "0.4.0"
axum = "0.7.5"
fake = "2.9.2"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
